--- a/DesignerRHN/DesignerRHN-war/web/periodicidad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/periodicidad.xhtml
@@ -30,7 +30,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.codigo}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.codigo}" id="editarCodigoCC" style="height: 12px; border-radius: 0px; width: 99%; text-transform: uppercase" > 
+                                            <p:inputText value="#{info.codigo}" maxlength="4" id="editarCodigoCC" style="height: 12px; border-radius: 0px; width: 99%; text-transform: uppercase" > 
                                                 <p:ajax  event="change" listener="#{controlPeriodicidades.modificandoUnidad(indice, 'N', info.codigo)}" update="@this"/>
                                                 <p:ajax event="select" listener="#{controlPeriodicidades.cambiarIndice(indice,0)}" /> 
                                             </p:inputText>
@@ -43,7 +43,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.nombre}" style="text-transform: uppercase" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText id="editarNombreCentroCoso" value="#{info.nombre}" style="height: 12px; border-radius: 0px; width: 99.5%; text-transform: uppercase">
+                                            <p:inputText id="editarNombreCentroCoso" maxlength="30" value="#{info.nombre}" style="height: 12px; border-radius: 0px; width: 99.5%; text-transform: uppercase">
                                                 <p:ajax event="change" listener="#{controlPeriodicidades.modificandoUnidad(indice, 'N', info.nombre)}" update="@this" />
                                                 <p:ajax event="select" listener="#{controlPeriodicidades.cambiarIndice(indice, 1)}" />
                                             </p:inputText>
@@ -348,13 +348,13 @@
 
                             <!--0-->
                             <strong><h:outputText value="*Codigo :" style="left: 15px; position: absolute; top: 60px" /></strong>
-                            <p:inputText id="nuevaCodigoCC" value="#{controlPeriodicidades.nuevaPeriodicidad.codigo}" style=" width: 122px; position: absolute; left: 200px; top: 55px; text-transform: uppercase">
+                            <p:inputText id="nuevaCodigoCC" maxlength="4" value="#{controlPeriodicidades.nuevaPeriodicidad.codigo}" style=" width: 122px; position: absolute; left: 200px; top: 55px; text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevaCodigoCC" value="Codigo" />
                             <!--1-->
                             <strong><h:outputText value="*Nombre :" style="left: 15px; position: absolute; top: 90px" /></strong>
-                            <p:inputText id="nuevaNombreUnidads" value="#{controlPeriodicidades.nuevaPeriodicidad.nombre}" style=" width: 122px; position: absolute; left: 200px; top: 85px;text-transform: uppercase">
+                            <p:inputText id="nuevaNombreUnidads" maxlength="30" value="#{controlPeriodicidades.nuevaPeriodicidad.nombre}" style=" width: 122px; position: absolute; left: 200px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevaNombreUnidads" value="Nombre" />
@@ -454,13 +454,13 @@
                         <p:panel id="duplicarUnidads" style="border: none;">
                             <!--0-->
                             <strong><h:outputText value="*Codigo :" style="left: 15px; position: absolute; top: 60px" /></strong>
-                            <p:inputText id="duplicarCodigoCC" value="#{controlPeriodicidades.duplicarPeriodicidad.codigo}" style=" width: 122px; position: absolute; left: 200px; top: 55px; text-transform: uppercase">
+                            <p:inputText id="duplicarCodigoCC" maxlength="4" value="#{controlPeriodicidades.duplicarPeriodicidad.codigo}" style=" width: 122px; position: absolute; left: 200px; top: 55px; text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigoCC" value="Codigo" />
                             <!--1-->
                             <strong><h:outputText value="*Nombre :" style="left: 15px; position: absolute; top: 90px" /></strong>
-                            <p:inputText id="duplicarNombreUnidads" value="#{controlPeriodicidades.duplicarPeriodicidad.nombre}" style=" width: 122px; position: absolute; left: 200px; top: 85px; text-transform: uppercase">
+                            <p:inputText id="duplicarNombreUnidads" maxlength="30"  value="#{controlPeriodicidades.duplicarPeriodicidad.nombre}" style=" width: 122px; position: absolute; left: 200px; top: 85px; text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombreUnidads" value="Nombre" />
