--- a/DesignerRHN/DesignerRHN-war/web/socondiciontrabajo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/socondiciontrabajo.xhtml
@@ -34,7 +34,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.codigo}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.codigo}" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.codigo}" maxlength="4" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlSoCondicionesTrabajos.cambiarIndice(indice, 0)}" process="@this"/> 
                                                 <p:ajax event="change" listener="#{controlSoCondicionesTrabajos.modificarSoCondicionesTrabajos(indice, 'N', info.codigo)}"  update="codigo"/>
                                             </p:inputText>
@@ -46,7 +46,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText style="text-transform: uppercase" value="#{info.factorriesgo}"  /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.factorriesgo}" id="editarNombre" style="height: 12px;  border-radius: 0px; width: 440px; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.factorriesgo}" maxlength="2000" id="editarNombre" style="height: 12px;  border-radius: 0px; width: 440px; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlSoCondicionesTrabajos.cambiarIndice(indice, 1)}" process="@this"/> 
                                                 <p:ajax event="change"  listener="#{controlSoCondicionesTrabajos.modificarSoCondicionesTrabajos(indice, 'N', info.factorriesgo)}" update="descripcion"/>
                                             </p:inputText>
@@ -220,13 +220,13 @@
                         <p:panel id="nuevaTipoempresa" style="border: none;">
 
                             <strong><h:outputText value="*Código: "  style=" position: absolute; top: 60px;" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlSoCondicionesTrabajos.nuevoSoCondicionesTrabajos.codigo}" style=" width: 150px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
+                            <p:inputText id="nuevoCodigo" maxlength="4" value="#{controlSoCondicionesTrabajos.nuevoSoCondicionesTrabajos.codigo}" style=" width: 150px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="Código" />
 
                             <strong><h:outputText value="*Factor Riesgo: "  style=" position: absolute; top: 90px;" /></strong>
-                            <p:inputText  id="nuevoNombre" value="#{controlSoCondicionesTrabajos.nuevoSoCondicionesTrabajos.factorriesgo}" style=" width: 150px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
+                            <p:inputText  id="nuevoNombre" maxlength="2000" value="#{controlSoCondicionesTrabajos.nuevoSoCondicionesTrabajos.factorriesgo}" style=" width: 150px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoNombre" value="Factor de Riesgo" />
@@ -243,13 +243,13 @@
 
                         <p:panel id="duplicarTE" style="border: none;">
                             <strong><h:outputText value="*Código: "  style=" position: absolute; top: 60px;" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlSoCondicionesTrabajos.duplicarSoCondicionesTrabajos.codigo}" style=" width: 150px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
+                            <p:inputText id="duplicarCodigo" maxlength="4" value="#{controlSoCondicionesTrabajos.duplicarSoCondicionesTrabajos.codigo}" style=" width: 150px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="Código" />
 
                             <strong><h:outputText value="*Factor Riesgo:"  style=" position: absolute; top: 90px;" /></strong>
-                            <p:inputText id="duplicarNombre" value="#{controlSoCondicionesTrabajos.duplicarSoCondicionesTrabajos.factorriesgo}"  style=" width: 150px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
+                            <p:inputText id="duplicarNombre" maxlength="2000" value="#{controlSoCondicionesTrabajos.duplicarSoCondicionesTrabajos.factorriesgo}"  style=" width: 150px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="Factor de Riesgo" />
