--- a/DesignerRHN/DesignerRHN-war/web/vigenciaplanta.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/vigenciaplanta.xhtml
@@ -57,7 +57,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.codigo}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.codigo}" id="editarCodigo" style="height: 12px;   border-radius: 0px; width: 700px; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.codigo}" maxlength="4" id="editarCodigo" style="height: 12px;   border-radius: 0px; width: 700px; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlVigenciasPlantas.cambiarIndice(indice, 0)}" process="@this"/> 
                                                 <p:ajax event="change" listener="#{controlVigenciasPlantas.modificarVigenciaPlanta(indice, 'N', info.codigo)}"  update="codigo"/>
                                             </p:inputText>
@@ -232,7 +232,7 @@
                         <p:panel id="nuevaTipoempresa" style="border: none;">
 
                             <strong><h:outputText value="*Código: "  style=" position: absolute; top: 90px;" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlVigenciasPlantas.nuevoVigenciaPlanta.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
+                            <p:inputText id="nuevoCodigo" maxlength="4" value="#{controlVigenciasPlantas.nuevoVigenciaPlanta.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="Código" />
@@ -257,8 +257,8 @@
                         <center><strong><h:outputText id="informacionDuplicar" value="Duplicar Vigencia Planta" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="duplicarTE" style="border: none;">
-                            <strong><h:outputText value="*Codigo: "  style=" position: absolute; top: 90px;" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlVigenciasPlantas.duplicarVigenciaPlanta.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
+                            <strong><h:outputText value="*Codigo: "   style=" position: absolute; top: 90px;" /></strong>
+                            <p:inputText id="duplicarCodigo" maxlength="4" value="#{controlVigenciasPlantas.duplicarVigenciaPlanta.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="Código" />
