--- a/DesignerRHN/DesignerRHN-war/web/sucursal.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/sucursal.xhtml
@@ -28,7 +28,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.codigo}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.codigo}" id="editarCodigo" style="  border-radius: 0px; width: 400px; text-transform: uppercase; height: 12px;"  > 
+                                            <p:inputText value="#{info.codigo}" maxlength="5" id="editarCodigo" style="  border-radius: 0px; width: 400px; text-transform: uppercase; height: 12px;"  > 
                                                 <p:ajax event="select" listener="#{controlSucursales.cambiarIndice(indice, 0)}" process="@this"/> 
                                                 <p:ajax event="change" listener="#{controlSucursales.modificarSucursales(indice, 'N', info.codigo)}"  update="codigo"/>
                                             </p:inputText>
@@ -40,7 +40,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText style="text-transform: uppercase" value="#{info.nombre}"  /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.nombre}" id="editarNombre" style="  border-radius: 0px; width: 99%; text-transform: uppercase; height: 12px;"  > 
+                                            <p:inputText value="#{info.nombre}" maxlength="30"  id="editarNombre" style="  border-radius: 0px; width: 99%; text-transform: uppercase; height: 12px;"  > 
                                                 <p:ajax event="select" listener="#{controlSucursales.cambiarIndice(indice, 1)}" process="@this"/> 
                                                 <p:ajax event="change"  listener="#{controlSucursales.modificarSucursales(indice, 'N', info.nombre)}" update="descripcion"/>
                                             </p:inputText>
@@ -334,13 +334,13 @@
                         <p:panel id="nuevaTipoempresa" style="border: none;">
 
                             <strong><h:outputText value="#{msg['codigoN']}"  style=" position: absolute; top: 60px" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlSucursales.nuevoSucursales.codigo}" style=" width: 135px; position: absolute; left: 120px; top: 55px;text-transform: uppercase">
+                            <p:inputText id="nuevoCodigo"  maxlength="5"  value="#{controlSucursales.nuevoSucursales.codigo}" style=" width: 135px; position: absolute; left: 120px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="#{msg['codigoNN']}" />
 
                             <strong><h:outputText value="#{msg['nombreN']} "  style=" position: absolute; top: 90px" /></strong>
-                            <p:inputText  id="nuevoNombre" value="#{controlSucursales.nuevoSucursales.nombre}" style=" width: 135px; position: absolute; left: 120px; top: 85px;text-transform: uppercase">
+                            <p:inputText  id="nuevoNombre" maxlength="30"  value="#{controlSucursales.nuevoSucursales.nombre}" style=" width: 135px; position: absolute; left: 120px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoNombre" value="#{msg['nombre']}" />
@@ -380,13 +380,13 @@
                         <p:panel id="duplicarTE" style="border: none;">
 
                             <strong><h:outputText value="#{msg['codigoN']}"  style=" position: absolute; top: 60px" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlSucursales.duplicarSucursales.codigo}" style=" width: 135px; position: absolute; left: 120px; top: 55px;text-transform: uppercase">
+                            <p:inputText id="duplicarCodigo" maxlength="5"  value="#{controlSucursales.duplicarSucursales.codigo}" style=" width: 135px; position: absolute; left: 120px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="#{msg['codigoNN']}" />
 
                             <strong><h:outputText value="#{msg['nombreN']}"  style=" position: absolute; top: 90px" /></strong>
-                            <p:inputText  id="duplicarNombre" value="#{controlSucursales.duplicarSucursales.nombre}" style=" width: 135px; position: absolute; left: 120px; top: 85px;text-transform: uppercase">
+                            <p:inputText  id="duplicarNombre" maxlength="30"  value="#{controlSucursales.duplicarSucursales.nombre}" style=" width: 135px; position: absolute; left: 120px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="#{msg['nombre']}" />
