--- a/DesignerRHN/DesignerRHN-war/web/ubicaciongeografica.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/ubicaciongeografica.xhtml
@@ -49,7 +49,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.descripcion}" style="text-transform: uppercase" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText id="editarNombreCentroCoso" value="#{info.descripcion}" style="height: 12px; border-radius: 0px; width: 95%; text-transform: uppercase">
+                                            <p:inputText id="editarNombreCentroCoso" maxlength="40" value="#{info.descripcion}" style="height: 12px; border-radius: 0px; width: 95%; text-transform: uppercase">
                                                 <p:ajax event="change" listener="#{controlUbicacionesGeograficas.modificandoUbicacionGeografica(indice, 'N', info.descripcion)}" update="@this" />
                                                 <p:ajax event="select" listener="#{controlUbicacionesGeograficas.cambiarIndice(indice, 1)}" />
                                             </p:inputText>
@@ -77,7 +77,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.direccion}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.direccion}" id="editarCodigoCTT" style="height: 12px; border-radius: 0px; width: 93.5%; text-transform: uppercase" > 
+                                            <p:inputText value="#{info.direccion}" maxlength="60" id="editarCodigoCTT" style="height: 12px; border-radius: 0px; width: 93.5%; text-transform: uppercase" > 
                                                 <p:ajax event="change" listener="#{controlUbicacionesGeograficas.modificandoUbicacionGeografica(indice, 'N', info.direccion )}" update="@this" />
                                                 <p:ajax event="select" listener="#{controlUbicacionesGeograficas.cambiarIndice(indice, 3)}" />
                                             </p:inputText>
@@ -90,7 +90,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.telefono}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.telefono}" id="editarTelefono" style="height: 12px; border-radius: 0px; width: 93.5%; text-transform: uppercase" > 
+                                            <p:inputText value="#{info.telefono}" maxlength="12" id="editarTelefono" style="height: 12px; border-radius: 0px; width: 93.5%; text-transform: uppercase" > 
                                                 <p:ajax event="change" listener="#{controlUbicacionesGeograficas.modificandoUbicacionGeografica(indice, 'N', info.telefono )}" update="@this" />
                                                 <p:ajax event="select" listener="#{controlUbicacionesGeograficas.cambiarIndice(indice, 4)}" />
                                             </p:inputText>
@@ -105,7 +105,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.fax}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.fax}" id="editarFax" style="height: 12px; border-radius: 0px; width: 93.5%; text-transform: uppercase" > 
+                                            <p:inputText value="#{info.fax}" maxlength="12" id="editarFax" style="height: 12px; border-radius: 0px; width: 93.5%; text-transform: uppercase" > 
                                                 <p:ajax event="change" listener="#{controlUbicacionesGeograficas.modificandoUbicacionGeografica(indice, 'N', info.fax)}" update="@this" />
                                                 <p:ajax event="select" listener="#{controlUbicacionesGeograficas.cambiarIndice(indice, 5)}" />
                                             </p:inputText>
@@ -118,7 +118,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.observacion}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.observacion}" id="editarObservacion" style="height: 12px; border-radius: 0px; width: 93.5%; text-transform: uppercase" > 
+                                            <p:inputText value="#{info.observacion}" maxlength="50" id="editarObservacion" style="height: 12px; border-radius: 0px; width: 93.5%; text-transform: uppercase" > 
                                                 <p:ajax event="change" listener="#{controlUbicacionesGeograficas.modificandoUbicacionGeografica(indice, 'N', info.observacion)}" update="@this" />
                                                 <p:ajax event="select" listener="#{controlUbicacionesGeograficas.cambiarIndice(indice, 6)}" />
                                             </p:inputText>
@@ -175,7 +175,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.codigoalternativo}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.codigoalternativo}" id="editarCodigoAT" style="height: 12px; border-radius: 0px; width: 93.5%; text-transform: uppercase" > 
+                                            <p:inputText value="#{info.codigoalternativo}" maxlength="4" id="editarCodigoAT" style="height: 12px; border-radius: 0px; width: 93.5%; text-transform: uppercase" > 
                                                 <p:ajax event="change" listener="#{controlUbicacionesGeograficas.modificandoUbicacionGeografica(indice, 'N', info.codigoalternativo )}" update="@this" />
                                                 <p:ajax event="select" listener="#{controlUbicacionesGeograficas.cambiarIndice(indice, 10)}" />
                                             </p:inputText>
@@ -424,7 +424,7 @@
                             <p:watermark for="nuevaCodigoCC" value="Codigo" />
 
                             <strong><h:outputText value="*Descripcion : " style="left: 10px; position: absolute; top: 90px; " /></strong>
-                            <p:inputText id="nuevaDescripcion" value="#{controlUbicacionesGeograficas.nuevaUbicacionGeografica.descripcion}" style=" width: 135px; position: absolute; left: 120px; top: 85px;text-transform: uppercase">
+                            <p:inputText id="nuevaDescripcion" maxlength="40" value="#{controlUbicacionesGeograficas.nuevaUbicacionGeografica.descripcion}" style=" width: 135px; position: absolute; left: 120px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevaDescripcion" value="Descripcion" />
@@ -446,18 +446,18 @@
 
 
                             <strong><h:outputText value="Telefono : " style="left: 10px; position: absolute; top: 180px; " /></strong>
-                            <p:inputText id="nuevaTelefono" value="#{controlUbicacionesGeograficas.nuevaUbicacionGeografica.telefono}" style=" width: 135px; position: absolute; left: 120px; top: 175px;text-transform: uppercase">
+                            <p:inputText id="nuevaTelefono" maxlength="12" value="#{controlUbicacionesGeograficas.nuevaUbicacionGeografica.telefono}" style=" width: 135px; position: absolute; left: 120px; top: 175px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevaTelefono" value="Telefono" />
                             <strong><h:outputText value="Fax : " style="left: 10px; position: absolute; top: 210px;" /></strong>
-                            <p:inputText id="nuevaFax" value="#{controlUbicacionesGeograficas.nuevaUbicacionGeografica.fax}" style=" width: 135px; position: absolute; left: 120px; top: 205px;text-transform: uppercase">
+                            <p:inputText id="nuevaFax" maxlength="12" value="#{controlUbicacionesGeograficas.nuevaUbicacionGeografica.fax}" style=" width: 135px; position: absolute; left: 120px; top: 205px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevaFax" value="Fax" />
 
                             <strong><h:outputText value="Observacion : " style=" position: absolute; left:320px ;top: 60px; " /></strong>
-                            <p:inputText id="nuevaObservacion" value="#{controlUbicacionesGeograficas.nuevaUbicacionGeografica.observacion}" style=" width: 135px; position: absolute; left: 480px; top: 55px;text-transform: uppercase">
+                            <p:inputText id="nuevaObservacion" maxlength="50" value="#{controlUbicacionesGeograficas.nuevaUbicacionGeografica.observacion}" style=" width: 135px; position: absolute; left: 480px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevaObservacion" value="Observacion" />
@@ -487,7 +487,7 @@
                             <p:watermark for="nuevaSucursal" value="Sucursal" />
 
                             <strong><h:outputText value="Codigo Alternativo : " style=" position: absolute;left:320px ; top: 180px; " /></strong>
-                            <p:inputText id="nuevaCA" value="#{controlUbicacionesGeograficas.nuevaUbicacionGeografica.codigoalternativo}" style=" width: 135px; position: absolute; left: 480px; top: 175px;text-transform: uppercase">
+                            <p:inputText id="nuevaCA" maxlength="4" value="#{controlUbicacionesGeograficas.nuevaUbicacionGeografica.codigoalternativo}" style=" width: 135px; position: absolute; left: 480px; top: 175px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevaCA" value="Codigo Alternativo" />
@@ -520,7 +520,7 @@
                             <p:watermark for="duplicarCodigo" value="Codigo" />
 
                             <strong><h:outputText value="Descripcion : " style="left: 10px; position: absolute; top: 90px; " /></strong>
-                            <p:inputText id="duplicarDescripcion" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.descripcion}" style=" width: 135px; position: absolute; left: 120px; top: 85px;text-transform: uppercase">
+                            <p:inputText id="duplicarDescripcion" maxlength="40" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.descripcion}" style=" width: 135px; position: absolute; left: 120px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarDescripcion" value="Descripcion" />
@@ -536,26 +536,26 @@
 
 
                             <strong><h:outputText value="Direccion: " style="left: 10px; position: absolute; top: 150px; " /></strong>
-                            <p:inputText id="duplicarDireccion" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.direccion}" style=" width: 135px; position: absolute; left: 120px; top: 145px;text-transform: uppercase">
+                            <p:inputText id="duplicarDireccion" maxlength="60" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.direccion}" style=" width: 135px; position: absolute; left: 120px; top: 145px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarDireccion" value="Direccion" />
 
 
                             <strong><h:outputText value="Telefono : " style="left: 10px; position: absolute; top: 180px; " /></strong>
-                            <p:inputText id="duplicarTelefono" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.telefono}" style=" width: 135px; position: absolute; left: 120px; top: 175px;text-transform: uppercase">
+                            <p:inputText id="duplicarTelefono" maxlength="12" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.telefono}" style=" width: 135px; position: absolute; left: 120px; top: 175px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarTelefono" value="Telefono" />
 
                             <strong><h:outputText value="Fax : " style="left: 10px; position: absolute; top: 210px;" /></strong>
-                            <p:inputText id="duplicarFax" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.fax}" style=" width: 135px; position: absolute; left: 120px; top: 205px;text-transform: uppercase">
+                            <p:inputText id="duplicarFax" maxlength="12" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.fax}" style=" width: 135px; position: absolute; left: 120px; top: 205px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarFax" value="Fax" />
 
                             <strong><h:outputText value="Observacion : " style=" position: absolute; left: 320px;top: 60px; " /></strong>
-                            <p:inputText id="duplicarObservacion" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.observacion}" style=" width: 135px; position: absolute; left: 480px; top: 55px;text-transform: uppercase">
+                            <p:inputText id="duplicarObservacion" maxlength="50" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.observacion}" style=" width: 135px; position: absolute; left: 480px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarObservacion" value="Observacion" />
@@ -586,7 +586,7 @@
                             <p:watermark for="duplicarSucursalPila" value="Sucursal Pila" />
 
                             <strong><h:outputText value="Codigo Alternativo : " style=" position: absolute;left: 320px; top: 180px; " /></strong>
-                            <p:inputText id="duplicarCA" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.codigoalternativo}" style=" width: 135px; position: absolute; left: 480px; top: 175px;text-transform: uppercase">
+                            <p:inputText id="duplicarCA" maxlength="4" value="#{controlUbicacionesGeograficas.duplicarUbicacionGeografica.codigoalternativo}" style=" width: 135px; position: absolute; left: 480px; top: 175px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCA" value="Codigo Alternativo" />
